<resources>
    <string name="app_name">EmployeeForm</string>
    <string name="employee_form">Employee Form</string>
    <string name="full_name">FullName</string>
    <string name="father_name">FatherName</string>
    <string name="date_of_birht">Date Of Birth</string>
    <string name="email_id">Email Id</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="city">City</string>
    <string name="accept_terms_and_conditions">Accept Terms and Conditions</string>
    <string name="terms_and_condition">Terms and Condition</string>
    <string name="employee_list">Employees List</string>
    <string name="name">Name</string>
    <string name="myo_set_paing">Myo Set Paing</string>
    <string name="msp009_gmail_com">msp009@gmail.com</string>
    <string name="phone_no">09423725272</string>
    <string name="view_employee_details">View Employee Details</string>
    <string name="u_hla_myo">U Hla Myo</string>
    <string name="dob">1.2.1996</string>
    <string name="gender">Gender</string>
    <string name="pyay">Pyay</string>
</resources>
